--- a/Fake News Detection.ipynb
+++ b/Fake News Detection.ipynb
@@ -245,9 +245,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
